--- a/IG/IG.ipynb
+++ b/IG/IG.ipynb
@@ -50,8 +50,8 @@
     "print(\"inputing username and password...\")\n",
     "\n",
     "# ------ 輸入帳號密碼 ------\n",
-    "username_input.send_keys(\"mt_blitz0913\")\n",
-    "password_input.send_keys(\"(31522321lL)\")\n",
+    "username_input.send_keys(\"帳號\")\n",
+    "password_input.send_keys(\"密碼\")\n",
     "\n",
     "# ------ 登入 ------\n",
     "WebDriverWait(browser, 30).until(EC.presence_of_element_located((By.XPATH,\n",
